--- a/client/css/main.css
+++ b/client/css/main.css
@@ -16,6 +16,10 @@ html {
     line-height: 1.4;
 }
 
+.btn-default {
+    width: 100px;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
