--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,284 +1,120 @@
-/*! HTML5 Boilerplate v5.2.0 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
-
 .btn-default {
-    width: 100px;
+    width: 350px;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
+/*.stack-box {*/
+    /*position: relative;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+/*}*/
 
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
+/*.resource-bars {*/
+    /*position: absolute;*/
+    /*top: 5px;*/
+    /*left: 5px;*/
+    /*display: inline-block;*/
+    /*width: 400px;*/
+    /*width: 20%;*/
+/*}*/
+
+/*.floors {*/
+    /*position: relative;*/
+    /*top: 75px;*/
+    /*right: 5px;*/
+
+    /*width: 400px;*/
+    /*width: 75%;*/
+/*}*/
+
+h1 {
+    font: 'Oswald', sans-serif;
 }
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+#world-view {
+    /*width: 800px;*/
+    /*height: 800px;*/
+    /*top: 5px;*/
+    /*bottom: 5px;*/
+    /*left: 5px;*/
+    /*right: 5px;*/
+    /*overflow: hidden;*/
+    z-index: -1;
+    /*overflow-y: hidden;*/
+    /*overflow-x: hidden;*/
 }
 
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+#current-map {
+    z-index: -1;
+    width: 5000px;
+    height: 5000px;
+    position: fixed;
+    background-color: grey;
+    border: double;
+    border-width: 10px;
+    border-color: black;
 }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
+#map-title {
+    top: 50px;
+    left: 50px;
+    position: absolute;
+    width: 400px;
+    padding: 20px;
+    background-color: white;
+    border: medium;
+}
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
+#current-title {
+    position: absolute;
+    z-index: 99;
+    left: 50px;
+    padding: 20px;
+    border: double;
+    border-width: 5px;
+    opacity: .8;
+    background-color: white;
+    height: 40px;
+    text-align: center;
     vertical-align: middle;
 }
 
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers:
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
+#avatar {
+    z-index: 90;
     position: absolute;
-    width: 1px;
 }
 
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
+/*.room {*/
+    /*background-color: grey;*/
+    /*width: 400px;*/
+    /*height: 400px;*/
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate(-50%, -50%);*/
+/*}*/
 
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
+/*body {*/
+    /*-webkit-touch-callout: none;*/
+    /*-webkit-user-select: none;*/
+    /*-khtml-user-select: none;*/
+    /*-moz-user-select: none;*/
+    /*-ms-user-select: none;*/
+    /*user-select: none;*/
+    /*overflow:hidden;*/
+/*}*/
 
-/*
- * Hide visually and from screen readers, but maintain layout
- */
+/*#containerBox {*/
+    /*position:relative;*/
+    /*border:1px solid black;*/
+    /*width:3200px;*/
+    /*height:3200px;*/
+    /*overflow:hidden;*/
+/*}*/
 
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+/*.roomTitle {*/
+    /*padding: 20px;*/
+    /*border:5px solid black;*/
+    /*position: fixed;*/
+    /*background-color: white;*/
+    /*z-index: 999;*/
+/*}*/
