--- a/client/css/main.css
+++ b/client/css/main.css
@@ -33,25 +33,43 @@
 }
 
 .btn-default {
-    width: 200px;
+    width: 400px;
     height: 200px;
 }
 
 .floor-button {
-    width: 600px;
-    height: 50px;
+    /*width: 600px;*/
+    /*height: 50px;*/
+}
+
+.add-floor {
+    width :450px;
+    height: 25px;
 }
 
 .stack-box {
     margin-left: 25px;
     position: relative;
-    float: left;
+    /*float: left;*/
     font-family: 'Rajdhani', sans-serif;
+}
+
+.mini-button {
+    width: 50px;
+    height: 50px;
 }
 
 .progress-bar {
     color: black;
     font-family: 'Aldrich', sans-serif;
+}
+
+.room {
+    width: 400px;
+    height: 200px;
+    float: left;
+    margin: 1px;
+    position: relative;
 }
 
 /*.resource-bars {*/
