--- a/client/css/main.css
+++ b/client/css/main.css
@@ -10,7 +10,7 @@
     font-family: 'Rajdhani';
     font-style: normal;
     font-weight: 400;
-    src: local('Rajdhani'), local('Rajdhani-Regular'), url(../fonts/rajdhani.woff2),url(http://fonts.gstatic.com/s/rajdhani/v5/tz3398jtBIhi1rrADn6BZvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+    src: local('Rajdhani'), local('Rajdhani-Regular'), url(http://fonts.gstatic.com/s/rajdhani/v5/tz3398jtBIhi1rrADn6BZvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* latin */
