--- a/client/css/mainNew.css
+++ b/client/css/mainNew.css
@@ -161,6 +161,22 @@ body {
     padding-top:20px;
 }
 
+.levelData {
+    float:left;
+    margin-left:-150px;
+    width:200px;
+    height:100px;
+    background-image:url("../img/concreteSmall.jpg");
+    background-size: 100%;
+    color: #BBBBBB;
+    text-shadow: 0px 0px 4px #000000, 0px -4px 4px #000000, 0px -8px 6px #000000;
+    font-family: "Titillium Web";
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align:center;
+    padding-top:70px;
+}
+
 .level {
     background-image: url("../img/room000.png");
     /*opacity:0.8;*/
